fix: no db, just rank per request
